# tictactoe

./: .gitignore  README.md  create_patch.py  release_body.json  release_notes.txt  release_patch.json  tic tac toe.pyw  tictactoe.html  tictactoe.pyw
tictactoe_android/app/: build.gradle.kts
tictactoe_android/app/src/main/: AndroidManifest.xml
tictactoe_android/app/src/main/java/com/tictactoe/app/: MainActivity.kt
tictactoe_android/app/src/main/res/drawable/: btn_gradient.xml  btn_secondary.xml  cell_bg.xml  cell_lose.xml  cell_win.xml  rounded_card.xml
tictactoe_android/app/src/main/res/layout/: activity_main.xml
tictactoe_android/app/src/main/res/values/: colors.xml  themes.xml
tictactoe_cpp/: CMakeLists.txt  README_CPP.md  compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h
tictactoe_csharp/: TicTacToe.cs  build_and_run.bat
tictactoe_go/: README_GO.md  go.mod  main.go
tictactoe_java/: TicTacToe.java  build_and_run.bat
tictactoe_javascript/: tictactoe.html
tictactoe_rust/: Cargo.toml
tictactoe_rust/src/: main.rs
